<resources>
    <string name="app_name">Truck Adda Driver</string>
    <string name="title_activity_maps">Truck Adda</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to map activity-->
    <string name="drop_up_location">Drop up location</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="vehicle_info">VEHICLE INFO</string>
    <string name="ratekm">RATE / KM</string>
    <string name="REQUEST_RIDE">Ride Now</string>
    <string name="Ride_Later">Reid Later</string>
    <string name="locationimg_dec">Location</string>
    <string name="ride_status1">Picked Cargo</string>
    <string name="Working_Switch">Working</string>
    <string name="Customer_Destination">Destination: --</string>
    <string name="ride_status2">Cargo Dropped</string>

    <!--Vehicle Types Radio Button-->
    <string name="truck1">Suzuki Open</string>
    <string name="truck2">Suzuki Closed</string>
    <string name="truck3">Riksha</string>


    <!-- Strings related to login -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Register Now</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="home">Home</string>
    <string name="weight_calculator">Weight Calculator</string>
    <string name="booking_history">Booking History</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="terms">Terms</string>\
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="online">you are online</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="d_name">Name</string>
    <string name="d_phone">Phone 0092-345-6789012</string>
    <string name="d_reg">Registration Number</string>
    <string name="d_confirm">Confirm</string>
    <string name="d_back">Back</string>
    <string name="settings">Profile</string>
    <string name="history">History</string>


</resources>
